[gd_scene load_steps=11 format=3 uid="uid://bojnaxjajdt4t"]

[ext_resource type="Script" uid="uid://1bvemn8dsrw2" path="res://gamescenes/card_slot.gd" id="1_k0ghl"]
[ext_resource type="AudioStream" uid="uid://goatyxdn1tmi" path="res://resources/sound/sfx/flopp/flop1.mp3" id="2_idug8"]
[ext_resource type="AudioStream" uid="uid://bgt64l7cbj7mq" path="res://resources/sound/sfx/flopp/flop2.mp3" id="3_j7yer"]
[ext_resource type="AudioStream" uid="uid://p5p3acomjn8p" path="res://resources/sound/sfx/flopp/flopp3.mp3" id="4_m4uqj"]
[ext_resource type="AudioStream" uid="uid://bgm2q3474asvc" path="res://resources/sound/sfx/flopp/flopp4.mp3" id="5_fugls"]
[ext_resource type="AudioStream" uid="uid://d001gxx5sys7r" path="res://resources/sound/sfx/flopp/flopp5.mp3" id="6_qyixy"]
[ext_resource type="AudioStream" uid="uid://cq8xsd36dvagg" path="res://resources/sound/sfx/flopp/flopp6.mp3" id="7_mmtn1"]
[ext_resource type="AudioStream" uid="uid://d0edje3mk1833" path="res://resources/sound/sfx/flopp/flopp7.mp3" id="8_tvq4n"]
[ext_resource type="AudioStream" uid="uid://cf1n40n1hs0ta" path="res://resources/sound/sfx/flopp/flopp8.mp3" id="9_qr6ed"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pjk0h"]
random_pitch = 1.24
random_volume_offset_db = 1.14
streams_count = 8
stream_0/stream = ExtResource("2_idug8")
stream_1/stream = ExtResource("3_j7yer")
stream_2/stream = ExtResource("4_m4uqj")
stream_3/stream = ExtResource("5_fugls")
stream_4/stream = ExtResource("6_qyixy")
stream_5/stream = ExtResource("7_mmtn1")
stream_6/stream = ExtResource("8_tvq4n")
stream_7/stream = ExtResource("9_qr6ed")

[node name="card_slot" type="PanelContainer"]
custom_minimum_size = Vector2(200, 200)
script = ExtResource("1_k0ghl")

[node name="img" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="show_on_spawn_timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="show_on_flip_timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="flopp" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_pjk0h")
bus = &"sfx"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="show_on_spawn_timer" to="." method="_on_show_on_spawn_timer_timeout"]
[connection signal="timeout" from="show_on_flip_timer" to="." method="_on_show_on_flip_timer_timeout"]
